# webgw

./: Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: rust.yml
docs/: README.md  core_protocol.md  server_api.yaml  specs.md  webgw_client_config.md
src/: bandwidth.rs  core.rs  lib.rs  protocol.rs  sniffer.rs  web_proxy.rs
src/sniffer/: http.rs  tls.rs
