[package]
name = "webgw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
# TODO: Reduce scope of features to required ones.
tokio = { version = "1.24.1", features = ["full"] }
# TODO: Needed?
async-trait = "0.1"
# Tracing instead of log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "time", "parking_lot"] }
rand = "0.8.5"
jsonrpsee = { version = "0.16.2", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
blake2 = "0.10.6"
faster-hex = "0.6.1"
clap = { version = "4.1.1", features = ["derive"] }
toml = "0.5.10"
axum = "0.6.2"
