[package]
name = "webgw"
version = "0.1.0"
edition = "2021"
authors = ["TF TECH NV <info@threefold.tech>"]
description = "Threefold grid networking utilities"
readme = "README.md"
repository = "https://github.com/threefoldtech/webgw"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
# Technically we only need signal and fs because the others are enabled by other libraries.
# Also, make sure parking lot is enabled.
tokio = { version = "1.24.2", features = [
  "macros",
  "net",
  "io-util",
  "rt-multi-thread",
  "time",
  "sync",
  "parking_lot",
  "signal",
  "fs",
] }
async-trait = "0.1"
# Tracing instead of log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "local-time",
  "time",
  "parking_lot",
] }
rand = "0.8.5"
jsonrpsee = { version = "0.16.2", features = [
  "ws-client",
  "macros",
  "server",
  "client",
] }
serde = { version = "1.0.152", features = ["derive"] }
faster-hex = "0.6.1"
clap = { version = "4.1.1", features = ["derive"] }
toml = "0.5.10"
axum = { version = "0.6.2", default-features = false, features = [
  "json",
  "tower-log",
  "tokio",
] }
sha2 = "0.10.6"
tokio-util = "0.7.4"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
